fixed align of home

--- a/src/Component/Home/Home.css
+++ b/src/Component/Home/Home.css
@@ -1,7 +1,6 @@
 
 .section {
-	margin-top: 4%;
-	padding: 2rem 5%;
+	padding: 5% 5%;
 }
 
 .container-1 {
